Remove the fixed-width CSS for the exploration graph minimap container, so that it is not cut off by the right edge of the screen.

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -637,7 +637,6 @@ textarea {
 
 .oppia-graph-viz-container {
   height: 250px;
-  width: 250px;
   border-radius: 4px;
   border: 1px solid black;
 }
